[package]
name = "solana-exporter"
version = "0.1.0"
edition = "2021"
authors = ["ArchiFleKs <kevin@kiln.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
figment = { version = "0.10.8", features = ["env", "yaml"] }
prometheus_exporter = "0.8.5"
serde = { version = "1.0.156", features = ["derive"] }
solana-client = "1.15.2"
solana-program = "1.15.2"
solana-sdk = "1.15.2"
solana-vote-program = "1.15.2"
